# Mediaflow-studio

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
configs/: adaptive-buffer-comparison.json  audio-only-stable.json  bandwidth-constrained.json  burst-loss.json  custom-audio-only.json  high-jitter.json  low-buffer-failure.json  mild-loss.json  moderate-jitter.json  reorder-heavy.json  stable.json
docs/: architecture.md  design_decisions.md  interview_notes.md  resume_materials.md
examples/: README.md  adaptive-buffer-comparison-demo-result.json  stable-demo-result.json
include/mediaflow/: config.hpp  event_bus.hpp  frame_generator.hpp  http_server.hpp  jitter_buffer.hpp  logger.hpp  metrics.hpp  network_simulator.hpp  random.hpp  receiver.hpp  scenario_factory.hpp  sender.hpp  simulation_engine.hpp  types.hpp
scripts/: check.sh  run_dashboard_dev.sh  run_demo.sh
src/: config.cpp  frame_generator.cpp  http_server.cpp  jitter_buffer.cpp  logger.cpp  main.cpp  metrics.cpp  network_simulator.cpp  receiver.cpp  scenario_factory.cpp  sender.cpp  simulation_engine.cpp
tests/: config_loader_tests.cpp  deterministic_replay_tests.cpp  integration_scenario_tests.cpp  jitter_buffer_tests.cpp  metrics_tests.cpp  receiver_tests.cpp  sender_tests.cpp
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ChartPanel.tsx  ControlSidebar.tsx  EventLog.tsx  MetricCard.tsx  ScenarioPanel.tsx  StatusBadge.tsx
ui/src/lib/: api.ts  config.ts  format.ts  types.ts
